add early_morning blog

--- a/_posts/2018-05-16-5月早读.md
+++ b/_posts/2018-05-16-5月早读.md
@@ -2,7 +2,7 @@
 layout: post
 title: 陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-05-13
+date:   2018-05-16
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,35 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day62 5.16 早读原文](https://mp.weixin.qq.com/s/uOtELLv-bv804n7mfJt_Jg)
+I believe I can fly<br>
+I believe I can touch the sky<br>
+I think about it every night and day<br>
+Spread my wings and fly away
+
+我相信我会飞，触碰天际，日日夜夜，展翅高飞。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzODY5">
+</audio>
+
+##### [Day61 5.15 早读原文](https://mp.weixin.qq.com/s/M3p7Jha7REgPj0tB6BaRFw)
+Next time someone complains that you have made a mistake, tell him that may be a good thing. Because without imperfection, neither you nor I would exist.
+
+下次再有人抱怨你出错，请告诉他，感谢犯错，若没有这些不完美，你我焉之何附？<br>
+成功背后总有失败铺垫，有时，成功就是失败当头，仍坚持不放弃而已。致敬霍金。早安。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzODU2">
+</audio>
+
+##### [Day60 5.14 早读原文](https://mp.weixin.qq.com/s/X-xRya5lrNAXAu1j612WOg)
+German philosopher Friedrich Nietzsche said, that which does not kill us makes us stronger.
+
+德国先哲尼采曾云，杀不死我的必会让我更强大。<br>
+置之死地而后生，死亦不惧，何惧今生？努力过好每一天，早安。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzODI3">
+</audio>
 
 ##### [Day59 5.13 早读原文](https://mp.weixin.qq.com/s/U53EJM06PfKlvqDuP9Trfg)
 You have to trust your gut and try to do the right thing, because it's our choices that make us who we are.
