--- a/_posts/2018-05-18-5月早读.md
+++ b/_posts/2018-05-18-5月早读.md
@@ -2,7 +2,7 @@
 layout: post
 title: 陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-05-17
+date:   2018-05-18
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,15 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day64 5.18 早读原文](https://mp.weixin.qq.com/s/tzzDVU-cXO2kQwNYS5BzIw)
+We're all sinners.And we all think we need to be punished,even if our sins don't exist.
+
+原罪论之观点，我们都认为自己应遭遇惩罚，即便原本无罪。
+惩罚终究不是目的，人性或许有善有恶，你相信什么，就会遇见什么。晚安~
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzODgx">
+</audio>
 
 ##### [Day63 5.17 早读原文](https://mp.weixin.qq.com/s/zIrjOuNo_YNLh9wM13j_3Q)
 Don't let other people get in the way of what you really want.
