add early_morning blog

--- a/_posts/2018-05-24-5月早读.md
+++ b/_posts/2018-05-24-5月早读.md
@@ -2,7 +2,7 @@
 layout: post
 title: 陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-05-18
+date:   2018-05-24
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,52 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day69 5.23 早读原文](https://mp.weixin.qq.com/s/5_7w2n_-JKNtalG3lkzUHA)
+Should auld acquaintance be forgot,<br>
+And never brought to mind?<br>
+Should auld acquaintance be forgot,<br>
+And auld lang syne.
+
+往昔岁月流逝，岂会轻易相忘。<br>
+而今岁月如歌，友谊地久天长。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzOTgy">
+</audio>
+
+##### [Day68 5.22 早读原文](https://mp.weixin.qq.com/s/WsM3Sx3FhP01LJQP5O-DvQ)
+But one man loved the pilgrim soul in you,<br>
+And loved the sorrows of your changing face;
+
+只有一个人爱你朝圣者的灵魂，爱你衰老了的脸上痛苦的皱纹。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzOTY4">
+</audio>
+
+##### [Day67 5.21 早读原文](https://mp.weixin.qq.com/s/HUENpNwwaPgOVATr1lU9Fg)
+Not everything that counts can be counted, and not everything that's counted truly counts.
+
+有价者未必可标价，标价者未必真有价。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzOTM5">
+</audio>
+
+##### [Day66 5.20 早读原文](https://mp.weixin.qq.com/s/NdEcMOHaLgeeRGQeD2t8Bg)
+It started with a tiny grain of stand.But then,after a while,it grew into something beautiful.Dreams can begin small too.《鲨鱼黑帮》
+
+一开始是一小粒沙子。但过了一段时间，它变成了美丽的东西。梦也可以从小开始。晚安~
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzOTA1">
+</audio>
+
+##### [Day65 5.19 早读原文](https://mp.weixin.qq.com/s/t4eXHNgV_v2z5v9kH8YNbg)
+You can't hold the tide with a broom.《银翼杀手2049》
+
+你不能用扫帚来抵挡潮水。<br>
+时势造英雄，英雄绘时代。每个人，都可以成为专属自己的superman.
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzOTAw">
+</audio>
 
 ##### [Day64 5.18 早读原文](https://mp.weixin.qq.com/s/tzzDVU-cXO2kQwNYS5BzIw)
 We're all sinners.And we all think we need to be punished,even if our sins don't exist.
