add early_morning blog

--- a/_posts/2018-05-25-5月早读.md
+++ b/_posts/2018-05-25-5月早读.md
@@ -2,7 +2,7 @@
 layout: post
 title: 陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-05-24
+date:   2018-05-25
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,22 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day71 5.25 早读原文](https://mp.weixin.qq.com/s/76ESAWSoAYk5Vp35Js9UFw)
+Life is collection of moments.The idea is to have as many good ones as you can.
+
+生命不过一个个瞬间，尽可能多的拥有快乐瞬间吧！
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE0MDEw">
+</audio>
+
+##### [Day70 5.24 早读原文](https://mp.weixin.qq.com/s/ro1tJHcYOG3L6-FWFE9OOg)
+Big decisions are easy when you no other options.
+
+当你别无选择的时候，决定好做的多。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTEzOTk5">
+</audio>
 
 ##### [Day69 5.23 早读原文](https://mp.weixin.qq.com/s/5_7w2n_-JKNtalG3lkzUHA)
 Should auld acquaintance be forgot,<br>
