--- a/_posts/2018-05-28-5月早读.md
+++ b/_posts/2018-05-28-5月早读.md
@@ -2,7 +2,7 @@
 layout: post
 title: 陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-05-25
+date:   2018-05-28
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,15 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day74 5.28 早读原文](https://mp.weixin.qq.com/s/3PoBnG1WZNaAH-ghA1dBdg)
+Never convince yourself that what other people are telling you to do is right,if you don't fell like it's right in your heart.
+
+如果内心并不认同，终将无法确信别人所言。
+愿不再彷徨，少些迷茫，爱你所爱，行你所行，跟从内心，无问西东。早安。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE0MTAw">
+</audio>
 
 ##### [Day71 5.25 早读原文](https://mp.weixin.qq.com/s/76ESAWSoAYk5Vp35Js9UFw)
 Life is collection of moments.The idea is to have as many good ones as you can.
