add early_morning read blogs

--- a/_posts/2018-05-29-5月早读.md
+++ b/_posts/2018-05-29-5月早读.md
@@ -2,7 +2,7 @@
 layout: post
 title: 陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-05-28
+date:   2018-05-31
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,34 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day77 5.31 早读原文](https://mp.weixin.qq.com/s/JwFPD7Gw5IWt3tf1CquAwQ)
+When something bad happens,there's no point in wishing it had not happened.The only option is to minimise the demage.
+
+问题当前，祈求没有发生毫无益处，勇敢直面才是解决之道（唯一的选择是尽量减少损害）。
+真正的勇士是直面真相之后，依然砥砺前行。早安。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE0MTQ1">
+</audio>
+
+##### [Day76 5.30 早读原文](https://mp.weixin.qq.com/s/COR8bVtO5CiN1DHjfOAiWA)
+Set out to correct the world's wrongs,and you'll almost certainly wind up adding to them.
+
+欲纠世上错，必然错加错。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE0MTM1">
+</audio>
+
+##### [Day75 5.29 早读原文](https://mp.weixin.qq.com/s/cKJyHVFH26q8ujhOGsutfQ)
+The furthest distance in the world<br>
+Is not between life and death<br>
+But when I stand in front of you<br>
+Yet you don't know that I love you
+
+世界上最遥远的距离，不是生与死。而是我站在你面前，你却不知道我爱你。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE0MTE5">
+</audio>
 
 ##### [Day74 5.28 早读原文](https://mp.weixin.qq.com/s/3PoBnG1WZNaAH-ghA1dBdg)
 Never convince yourself that what other people are telling you to do is right,if you don't fell like it's right in your heart.
