--- a/_posts/2018-06-11-6月早读.md
+++ b/_posts/2018-06-11-6月早读.md
@@ -2,7 +2,7 @@
 layout: post
 title: 陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-06-06
+date:   2018-06-11
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,15 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day88 6.11 早读原文](https://mp.weixin.qq.com/s/6a_Cbbv9iqqYJkMdUscuSg)
+Ideas don't come out fully formed.They only become clear as you work on them.You just have get started.
+
+想法并不会在最初就完全成形。只有你不断使其完善，它才会逐渐清晰。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE0Mzgx">
+</audio>
+
 
 ##### [Day83 6.06 早读原文](https://mp.weixin.qq.com/s/CLkSryj26joxkzqqzM5SAA)
 My advice to you, would be to accept the burden that chance has seen fit to lay upon you, and to fashion as good a life as you are able.
