--- a/_posts/2018-06-18-6月早读.md
+++ b/_posts/2018-06-18-6月早读.md
@@ -2,7 +2,7 @@
 layout: post
 title: 陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-06-11
+date:   2018-06-15
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,49 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day92 6.15 早读原文](https://mp.weixin.qq.com/s/QEuDfHFZEKNzxg5HJP-NnQ)
+The purpose of education is to draw the best out of children, not to beat fear into them.
+
+教育的初衷是唤醒内在驱动，而不是用恐惧震慑言行。
+自发性和自主性，才是个体发展的最好驱动力。内因是主，外因为辅。早安。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE0NDE3">
+</audio>
+
+##### [Day91 6.14 早读原文](https://mp.weixin.qq.com/s/b-7e7Ag-49v_FZeCUDX-MQ)
+We took our friends for granted, we stopped listening. They were the last thing we were thinking about, and they should've been the first.<br>
+
+我们有时会想当然，停止倾听，忘却思考，而朋友恰恰应该是我们放心上的人。
+真正的朋友，既会同甘，更愿共苦，以诚相待，不离不弃。一句我在，胜过千言。早安。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE0NDEx">
+</audio>
+
+##### [Day90 6.13 早读原文](https://mp.weixin.qq.com/s/BROdzEaL2skddM26IZONGA)
+if I could get another chance<br>
+如果我还有一次机会<br>
+another walk<br>
+跟父亲散步<br>
+another dance with him<br>
+与父亲共舞<br>
+I'd play a song that would never ever end<br>
+我会放一首永远不会结束的曲子<br>
+how I love love love<br>
+我是多么想<br>
+to dance with my father again<br>
+再跟父亲跳一次舞
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE0NDAx">
+</audio>
+
+##### [Day89 6.12 早读原文](https://mp.weixin.qq.com/s/lQukv96yiWSqR8P9ueTW6Q)
+There's a yin for every yang.If there's bad,good will rise up against it.
+
+有阳必有阴。如果有不好的事情，总会有好的事情反抗它。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE0Mzkx">
+</audio>
 
 ##### [Day88 6.11 早读原文](https://mp.weixin.qq.com/s/6a_Cbbv9iqqYJkMdUscuSg)
 Ideas don't come out fully formed.They only become clear as you work on them.You just have get started.
