add early_reading blogs and technology blog

--- a/_posts/2018-06-20-6月早读.md
+++ b/_posts/2018-06-20-6月早读.md
@@ -2,7 +2,7 @@
 layout: post
 title: 陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-06-15
+date:   2018-06-20
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,31 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day95 6.20 早读原文](https://mp.weixin.qq.com/s/grkiqLCs72f-ZAqH7Jtbsw)
+The world may change my whole life through,
+but nothing's gonna change my love for you.
+
+世界可能会改变我的整个生活，但什么也改变不了我对你的爱。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE0NTMy">
+</audio>
+
+##### [Day94 6.19 早读原文](https://mp.weixin.qq.com/s/eLbEzwOKNFJhyffnVFPe5g)
+I may not agree with what you have to say, but I will fight to the death to defend your right to say it.<br>
+
+我不同意你说的话，但是我誓死捍卫(defend)你说话的权利。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE0NTIz">
+</audio>
+
+##### [Day93 6.18 早读原文](https://mp.weixin.qq.com/s/dj-qWg1vOa4rX6d6VshJQQ)
+For the ideal that I hold so dear to my heart, I'd not regret a thousand times to die.
+
+这些都是我内心所真爱的，死一千次我也不会后悔。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE0NDcy">
+</audio>
 
 ##### [Day92 6.15 早读原文](https://mp.weixin.qq.com/s/QEuDfHFZEKNzxg5HJP-NnQ)
 The purpose of education is to draw the best out of children, not to beat fear into them.
