--- a/_posts/2018-06-20-MySQL命名、设计及使用规范.md
+++ b/_posts/2018-06-20-MySQL命名、设计及使用规范.md
@@ -20,11 +20,75 @@ tags:
 最近做的项目用的是MySQL，有强迫症的我老是纠结字段的命名和表的设计规范，于是就从网上整理如下规范，作为一名刚刚学习MySQL的菜鸟，整理的内容非常的基础，中间可能涉及到有错误的地方，欢迎批评指正，看到有错误的地方期望看官留言。
 
 
+## 数据库环境
+
+
+
+- dev：开发环境，开发可读写，可修改表结构。开发人员可以修改表结构，可以随意修改其中的数据但是需要保证不影响其他开发同事。
+
+
+- qa：测试环境，开发可读写，开发人员可以通过工具修改表结构。
+
+
+- sim：模拟环境，开发可读写，发起上线请求时，会先在这个环境上进行预执行，这个环境也可供部署上线演练或压力测试使用。
+
+
+- real：生产数据库从库（准实时同步），只读环境，不允许修改数据，不允许修改表结构，供线上问题查找，数据查询等使用。
+
+
+- online：线上环境，开发人员不允许直接在线上环境进行数据库操作，如果需要操作必须找DBA进行操作并进行相应记录，禁止进行压力测试。
+
+这些环境的机器，一定要做到权限划分明确，读写帐号分离，并且有辨识度，能区分具体业务。例如用户名r_ account，w_account 分别代表读、写账号，account是读写账号。
+
+## 命名规范
+
+#### 基本命名原则
+
+
+- 使用有意义的英文词汇，词汇中间以下划线分隔。（不要用拼音）
+
+
+- 只能使用英文字母，数字，下划线，并以英文字母开头。
+
+
+- 库、表、字段全部采用小写，不要使用驼峰式命名。
+
+
+- 避免用ORACLE、MySQL的保留字，如desc，关键字如index。
+
+
+- 命名禁止超过32个字符，须见名之意，建议使用名词不是动词
+
+
+- 数据库，数据表一律使用前缀
+
+
+- 临时库、表名必须以tmp为前缀，并以日期为后缀
+
+
+- 备份库、表必须以bak为前缀，并以日期为后缀
+
+
+> *为什么库、表、字段全部采用小写？* 
+
+
+> 在 MySQL 中，数据库和表对就于那些目录下的目录和文件。因而，操作系统的敏感性决定数据库和表命名的大小写敏感。
+
+
+> - Windows下是不区分大小写的。
+> - Linux下大小写规则：
+>  数据库名与表名是严格区分大小写的；<br>
+>  表的别名是严格区分大小写的；<br>
+>  列名与列的别名在所有的情况下均是忽略大小写的；<br>
+>  变量名也是严格区分大小写的；<br>
+>  如果已经设置了驼峰式的命名如何解决？需要在MySQL的配置文件my.ini中增加 lower_case_table_names = 1即可。
+
+
+---
 参考文档：<br>
-1. [MySQL命名、设计及使用规范](https://www.biaodianfu.com/mysql-best-practices.html)<br>
-2. [干货来袭.C#7.0新特性(VS2017可用)](http://www.cnblogs.com/GuZhenYin/p/6526041.html)<br>
-3. [开源翻译](https://www.oschina.net/translate/whats-new-in-csharp-7-0)<br>
-4. [欢迎使用.NET](https://docs.microsoft.com/zh-cn/dotnet/welcome)
+
+1. [MySQL数据库命名规范及约定](https://blog.csdn.net/sinat_29519243/article/details/70187040)<br>
+2. [MySQL命名、设计及使用规范](https://www.biaodianfu.com/mysql-best-practices.html)<br>
 
 
 
