--- a/_posts/2018-06-20-MySQL命名、设计及使用规范.md
+++ b/_posts/2018-06-20-MySQL命名、设计及使用规范.md
@@ -84,6 +84,59 @@ tags:
 >  如果已经设置了驼峰式的命名如何解决？需要在MySQL的配置文件my.ini中增加 lower_case_table_names = 1即可。
 
 
+#### 表命名
+
+- 同一个模块的表尽可能使用相同的前缀，表名称尽可能表达含义。所有日志表均以 log_ 开头
+
+#### 字段命名
+
+- 表达其实际含义的英文单词或简写。布尔意义的字段以“is_”作为前缀，后接动词过去分词。
+
+
+- 各表之间相同意义的字段应同名。各表之间相同意义的字段，以去掉模块前缀的表名_字段名命名。
+
+
+- 外键字段用表名_字段名表示其关联关系。
+
+
+- 表的主键一般都约定成为id，自增类型，是别的表的外键均使用xxx_id的方式来表明。
+
+#### 索引命名
+
+- 非唯一索引必须按照“idx_字段名称_字段名称[_字段名]”进行命名
+
+
+- 唯一索引必须按照“uniq_字段名称_字段名称[_字段名]”进行命名
+
+#### 约束命名
+
+- 主键约束：pk_表名称。
+
+- 唯一约束：uk_表名称_字段名。（应用中需要同时有唯一性检查逻辑。）
+#### 触发器命名
+
+
+
+- trg_表名_操作。
+#### 函数过程命名
+
+
+
+- 采用动词+名词的形式表达其含义。
+#### 序列命名
+
+
+
+- seq_表名
+
+## 表设计规范
+
+
+1. 表引擎取决于实际应用场景；日志及报表类表建议用myisam，与交易，审核，金额相关的表建议用innodb引擎。如无说明，建表时一律采用innodb引擎。myisam与innodb的区别
+
+
+2. 默认使用utf8mb4字符集，数据库排序规则使用utf8mb4_general_ci，（由于数据库定义使用了默认，数据表可以不再定义，但为保险起见，建议都写上）。
+
 ---
 参考文档：<br>
 
