add early_reading blog

--- a/_posts/2018-06-20-MySQL命名、设计及使用规范.md
+++ b/_posts/2018-06-20-MySQL命名、设计及使用规范.md
@@ -137,6 +137,12 @@ tags:
 
 2. 默认使用utf8mb4字符集，数据库排序规则使用utf8mb4_general_ci，（由于数据库定义使用了默认，数据表可以不再定义，但为保险起见，建议都写上）。
 
+
+为什么字符集不选择utf8，排序规则不使用utf8_general_ci？
+
+采用utf8编码的MySQL无法保存占位是4个字节的Emoji表情。为了使后端的项目，全面支持客户端输入的Emoji表情，升级编码为utf8mb4是最佳解决方案。对于JDBC连接串设置了characterEncoding为utf8或者做了上述配置仍旧无法正常插入emoji数据的情况，需要在代码中指定连接的字符集为utf8mb4。
+
+
 ---
 参考文档：<br>
 
