--- a/_posts/2018-06-22-6月早读.md
+++ b/_posts/2018-06-22-6月早读.md
@@ -2,7 +2,7 @@
 layout: post
 title: 陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-06-20
+date:   2018-06-22
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,14 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day96 6.21 早读原文](https://mp.weixin.qq.com/s/PRaV9YD5Mp1R7NmKn4eB7g)
+The bonds that bind another person to ourselves exist only in our mind.
+
+与他人联系的纽带，仅存在于我们脑海中。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE0NTM4">
+</audio>
 
 ##### [Day95 6.20 早读原文](https://mp.weixin.qq.com/s/grkiqLCs72f-ZAqH7Jtbsw)
 The world may change my whole life through,
