add Mearly_morning blog and repair blog's about.html

--- a/_posts/2018-06-22-6月早读.md
+++ b/_posts/2018-06-22-6月早读.md
@@ -14,6 +14,14 @@ tags:
 
 >  **英语早读**
 
+##### [Day97 6.22 早读原文](https://mp.weixin.qq.com/s/Be3MIRq_rLfTRXcPYj-GFA)
+Children need to discover things for themselves. They'll stumble and fall, laugh and cry, but such is life.
+
+孩子需要自己去经历人生，体味百态。成长，是跌跌撞撞的坚强，尽管有磕碰，有摩擦，哭过笑过，才是人生。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE0NTQ1">
+</audio>
+
 ##### [Day96 6.21 早读原文](https://mp.weixin.qq.com/s/PRaV9YD5Mp1R7NmKn4eB7g)
 The bonds that bind another person to ourselves exist only in our mind.
 
