--- a/_posts/2018-06-23-LINQ.md
+++ b/_posts/2018-06-23-LINQ.md
@@ -4,11 +4,11 @@ title: LINQ教程
 subtitle:   
 date:   2018-06-23
 author: JP
-header-img: img/post-bg-swift.jpg
+header-img: img/post-bg-coffee.jpg
 catalog: true
 tags:
 - LINQ
-- .net
+- .NET
 
 ---
 
