--- a/_posts/2018-06-23-LINQ.md
+++ b/_posts/2018-06-23-LINQ.md
@@ -4,7 +4,7 @@ title: LINQ教程
 subtitle:   
 date:   2018-06-23
 author: JP
-header-img: img/post-bg-coffee.jpg
+header-img: img/post-bg-coffee.jpeg
 catalog: true
 tags:
 - LINQ
