add early_morning blogs

--- a/_posts/2018-06-30-6月早读.md
+++ b/_posts/2018-06-30-6月早读.md
@@ -2,7 +2,7 @@
 layout: post
 title: 陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-06-22
+date:   2018-06-30
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,38 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day103 6.30 早读原文](https://mp.weixin.qq.com/s/ekeOyUIGHj9Ro5yDkuww2g)
+There was right, there was wrong. Now there is you. I cannot justice. You must decide.
+
+凡事要么是对的，要么是错的。现在有你们了，我岂能说了算。只能由你们来决定。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE0Njkw">
+</audio>
+
+##### [Day102 6.29 早读原文](https://mp.weixin.qq.com/s/Yzzpci0gfQGBBRpLTl6c9Q)
+It's important to always keep one thing in mind. When one thing ends, something else begins.
+
+始终牢记一件事是重要的，当一扇门关上，一扇窗会同时打开。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE0Njgw">
+</audio>
+
+##### [Day101 6.28 早读原文](https://mp.weixin.qq.com/s/W-hUgvFrbKSK9-1QRK4X6w)
+Just live well. Just live. I'll be walking beside you every step of the way.
+
+好好生活，努力活着，我会在你身后不离不弃。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE0Njcy">
+</audio>
+
+##### [Day100 6.27 早读原文](https://mp.weixin.qq.com/s/jHmFJWhCNT8opzSQXFtsRQ)
+While we may come from different places and speak in different tongues, our hearts beat as one.
+
+尽管我们来自不同的地方，但我们仍万众一心。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE0NjY3">
+</audio>
 
 ##### [Day97 6.22 早读原文](https://mp.weixin.qq.com/s/Be3MIRq_rLfTRXcPYj-GFA)
 Children need to discover things for themselves. They'll stumble and fall, laugh and cry, but such is life.
