--- a/_posts/2018-07-10-7月早读.md
+++ b/_posts/2018-07-10-7月早读.md
@@ -2,7 +2,7 @@
 layout: post
 title: 陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-07-08
+date:   2018-07-10
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,14 @@ tags:
 ---
 
 >  **英语早读**
+##### [Day113 7.10 早读原文](https://mp.weixin.qq.com/s/cGOuRmJXSnn9NZDw-23C6g)
+Passion is the thing that will help you create the highest expression of your talent.
+
+热情是最能帮助你成就你才华的一样东西。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE0OTA3">
+</audio>
+
 
 ##### [Day111 7.08 早读原文](https://mp.weixin.qq.com/s/4obuPfRIpmHyo4bBmvh1ng)
 You send out the wrong signal, that is what people pick up.
