--- a/_posts/2018-07-11-7月早读.md
+++ b/_posts/2018-07-11-7月早读.md
@@ -2,7 +2,7 @@
 layout: post
 title: 陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-07-10
+date:   2018-07-11
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,17 @@ tags:
 ---
 
 >  **英语早读**
+
+
+##### [Day114 7.11 早读原文](https://mp.weixin.qq.com/s/d1bFrpUQgjy8aEMyzrQO5A)
+So I'll just play my part, and pray you'll have a change of heart. 　
+But I can't make you see it through, that's something only love can do. 
+
+我祈祷你会改变主意，我没办法让你看穿，这件事情只有爱才能做到的。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE0OTE2">
+</audio>
+
 ##### [Day113 7.10 早读原文](https://mp.weixin.qq.com/s/cGOuRmJXSnn9NZDw-23C6g)
 Passion is the thing that will help you create the highest expression of your talent.
 
