add early_morning blogs

--- a/_posts/2018-07-12-7月早读.md
+++ b/_posts/2018-07-12-7月早读.md
@@ -2,7 +2,7 @@
 layout: post
 title: 陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-07-11
+date:   2018-07-12
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -14,6 +14,13 @@ tags:
 
 >  **英语早读**
 
+##### [Day115 7.12 早读原文](https://mp.weixin.qq.com/s/1QV61SZnzj9YRFgvUG4o0A)
+Sometimes you have to lose somebody completely before you figure out what they really mean to you.
+
+不到完全失去，你永远不会明白她对你多么重要。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE0OTMw">
+</audio>
 
 ##### [Day114 7.11 早读原文](https://mp.weixin.qq.com/s/d1bFrpUQgjy8aEMyzrQO5A)
 So I'll just play my part, and pray you'll have a change of heart. 　
