add early_morning blog

--- a/_posts/2018-07-13-7月早读.md
+++ b/_posts/2018-07-13-7月早读.md
@@ -2,7 +2,7 @@
 layout: post
 title: 陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-07-12
+date:   2018-07-13
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,15 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day116 7.13 早读原文](https://mp.weixin.qq.com/s/xuBBGPQKuwAnUm71ZLPXRw)
+You'll be shocked when you discover how easy it is in life to part ways with people forever. That's why, you find someone, you wanna keep around.
+
+错失一个人何其简单，遇到对的人，一定别错过。<br>
+有些人，一转身，已是下辈子。过往不追，未来可期。早安。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE0OTM0">
+</audio>
 
 ##### [Day115 7.12 早读原文](https://mp.weixin.qq.com/s/1QV61SZnzj9YRFgvUG4o0A)
 Sometimes you have to lose somebody completely before you figure out what they really mean to you.
