add early_morning blog

--- a/_posts/2018-07-16-7月早读.md
+++ b/_posts/2018-07-16-7月早读.md
@@ -2,7 +2,7 @@
 layout: post
 title: 陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-07-13
+date:   2018-07-16
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,14 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day117 7.16 早读原文](https://mp.weixin.qq.com/s/gsRmzRFOpuGZlJrMhPxJDg)
+Victory belongs to those that believe in it the most and believe in it the longest.
+
+成功属于那些信念坚定并且永不动摇的人。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE1MDEw">
+</audio>
 
 ##### [Day116 7.13 早读原文](https://mp.weixin.qq.com/s/xuBBGPQKuwAnUm71ZLPXRw)
 You'll be shocked when you discover how easy it is in life to part ways with people forever. That's why, you find someone, you wanna keep around.
