--- a/_posts/2018-07-17-7月早读.md
+++ b/_posts/2018-07-17-7月早读.md
@@ -2,7 +2,7 @@
 layout: post
 title: 陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-07-16
+date:   2018-07-17
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,14 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day118 7.17 早读原文](https://mp.weixin.qq.com/s/zLPk4qbDX4-lfqAqc75D-w)
+If something's wrong, they shouldn't just whine about it, they should get in there and do something about it, change things.
+
+时局不佳时，抱怨有何用？应该尝试做出努力去改变。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE1MDQw">
+</audio>
 
 ##### [Day117 7.16 早读原文](https://mp.weixin.qq.com/s/gsRmzRFOpuGZlJrMhPxJDg)
 Victory belongs to those that believe in it the most and believe in it the longest.
