--- a/_posts/2018-07-19-7月早读.md
+++ b/_posts/2018-07-19-7月早读.md
@@ -2,7 +2,7 @@
 layout: post
 title: 陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-07-17
+date:   2018-07-19
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,14 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day120 7.19 早读原文](https://mp.weixin.qq.com/s/XTCs_xPFO-DnVG6Idbbvog)
+Being unique is very important. Fitting in is not really all that matters as being unique and being who you are.
+
+做独特的人是非常重要的，融入到大的环境和做自己，保持独特性相比，并不是那么重要。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE1MDUz">
+</audio>
 
 ##### [Day118 7.17 早读原文](https://mp.weixin.qq.com/s/zLPk4qbDX4-lfqAqc75D-w)
 If something's wrong, they shouldn't just whine about it, they should get in there and do something about it, change things.
