--- a/_posts/2018-07-20-7月早读.md
+++ b/_posts/2018-07-20-7月早读.md
@@ -2,7 +2,7 @@
 layout: post
 title: 陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-07-19
+date:   2018-07-20
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,14 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day121 7.20 早读原文](https://mp.weixin.qq.com/s/vNjZs9ST92neR49_xInJHw)
+We all carry scars, inside or out. You're no different to the rest of us, remember that.
+
+世间人皆有伤痕，有伤在心有在身，你我并无大不同，此事莫忘记于心。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE1MDU5">
+</audio>
 
 ##### [Day120 7.19 早读原文](https://mp.weixin.qq.com/s/XTCs_xPFO-DnVG6Idbbvog)
 Being unique is very important. Fitting in is not really all that matters as being unique and being who you are.
