add early_morning blog

--- a/_posts/2018-07-23-7月早读.md
+++ b/_posts/2018-07-23-7月早读.md
@@ -2,7 +2,7 @@
 layout: post
 title: 陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-07-20
+date:   2018-07-23
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,14 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day122 7.23 早读原文](https://mp.weixin.qq.com/s/vLg-blwPyff87vHfVfhDag)
+I love not only your strapping stature,but also your firm stand,the earth beneath you.
+
+不仅爱你伟岸的身躯，也爱你坚持的位置，足下的土地。——致橡树
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE1MTMy">
+</audio>
 
 ##### [Day121 7.20 早读原文](https://mp.weixin.qq.com/s/vNjZs9ST92neR49_xInJHw)
 We all carry scars, inside or out. You're no different to the rest of us, remember that.
