--- a/_posts/2018-07-25-7月早读.md
+++ b/_posts/2018-07-25-7月早读.md
@@ -2,7 +2,7 @@
 layout: post
 title: 陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-07-23
+date:   2018-07-25
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,14 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day124 7.25 早读原文](https://mp.weixin.qq.com/s/KGsI67nwlSo74UmSGTgJ0w)
+Even the worst circumstances can result in growth and transformation.
+
+即使是最糟糕的境遇，也会带来成长和转变。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE1MTY0">
+</audio>
 
 ##### [Day122 7.23 早读原文](https://mp.weixin.qq.com/s/vLg-blwPyff87vHfVfhDag)
 I love not only your strapping stature,but also your firm stand,the earth beneath you.
