--- a/_posts/2018-07-26-7月早读.md
+++ b/_posts/2018-07-26-7月早读.md
@@ -2,7 +2,7 @@
 layout: post
 title: 陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-07-25
+date:   2018-07-26
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,14 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day125 7.26 早读原文](https://mp.weixin.qq.com/s/anksZga6LCaiiy_EEr75HQ)
+Once connot deny who one is meant to be.
+
+你会成为什么样子你其实决定不了。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE1MTcx">
+</audio>
 
 ##### [Day124 7.25 早读原文](https://mp.weixin.qq.com/s/KGsI67nwlSo74UmSGTgJ0w)
 Even the worst circumstances can result in growth and transformation.
