--- a/_posts/2018-07-28-7月早读.md
+++ b/_posts/2018-07-28-7月早读.md
@@ -2,7 +2,7 @@
 layout: post
 title: 陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-07-26
+date:   2018-07-28
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,23 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day127 7.28 早读原文](https://mp.weixin.qq.com/s/jB-bpRQtCmHZWz1FoPdpag)
+
+Sometimes you have to look hard at something,to see its value.
+
+有时，你必须用心体会一些事情才能看到它的价值。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE1MTkw">
+</audio>
+
+##### [Day126 7.27 早读原文](https://mp.weixin.qq.com/s/vvRb1RusHbN1HuOTQmR3tw)
+The bedrock of deep, meaningful friendships is shared experience.
+
+深厚的友谊考的是共同经历。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE1MTc2">
+</audio>
 
 ##### [Day125 7.26 早读原文](https://mp.weixin.qq.com/s/anksZga6LCaiiy_EEr75HQ)
 Once connot deny who one is meant to be.
