--- a/_posts/2018-08-06-8月早读.md
+++ b/_posts/2018-08-06-8月早读.md
@@ -2,7 +2,7 @@
 layout: post
 title: 陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-08-06
+date:   2018-08-08
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,15 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day139 8.08 早读原文](https://mp.weixin.qq.com/s/8_uspHUIIpXpFxxarr6rtw)
+
+Heal the world.Make it a better place.For you and for me and the entire human race.
+
+拯救这个世界，把它变成更好的地方。为你，为我，为了全人类。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE1Mzk4">
+</audio>
 
 ##### [Day137 8.06 早读原文](https://mp.weixin.qq.com/s/VpZc7-ulh99QpxaVTI0d1w)
 
