--- a/_posts/2018-09-04-9月早读.md
+++ b/_posts/2018-09-04-9月早读.md
@@ -2,7 +2,7 @@
 layout: post
 title: 陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-08-31
+date:   2018-09-04
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,15 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day181 9.04 早读原文](https://mp.weixin.qq.com/s/aLZOu4i6bu0lT2nFu343YA)
+
+A bad deed done with compassion is still a merciful act.
+
+带着怜悯做的坏事任然是仁慈之举。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE1ODkx">
+</audio>
 
 ##### [Day180 9.03 早读原文](https://mp.weixin.qq.com/s/TZzTQhP8vejuwUwvjYpFYg)
 
