--- a/_posts/2018-09-07-9月早读.md
+++ b/_posts/2018-09-07-9月早读.md
@@ -2,7 +2,7 @@
 layout: post
 title: 陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-09-04
+date:   2018-09-07
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,15 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day186 9.07 早读原文](https://mp.weixin.qq.com/s/3PUixs3DlBn8PhDZcEeK5A)
+
+Trying to change the world only leads to suffering. All we can change is ourselves.
+
+想要改变世界只会带来痛苦，我们能够改变的只不过是我们自己罢了。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE1OTEy">
+</audio>
 
 ##### [Day181 9.04 早读原文](https://mp.weixin.qq.com/s/aLZOu4i6bu0lT2nFu343YA)
 
