--- a/_posts/2018-09-10-9月早读.md
+++ b/_posts/2018-09-10-9月早读.md
@@ -2,7 +2,7 @@
 layout: post
 title: 陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-09-07
+date:   2018-09-10
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,21 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day187 9.10 早读原文](https://mp.weixin.qq.com/s/jrpBU9eiW0Wd4mp-RCvZ7Q)
+
+You teach me right from wrong
+Inspire me to be strong
+You care in every way
+In my heart you will always stay
+
+您教会了我明辨是非<br>
+您鼓舞我变得强壮<br>
+在每一个方面您都会关心我<br>
+在我的心里，你一直会停留在此刻
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE1OTg4">
+</audio>
 
 ##### [Day186 9.07 早读原文](https://mp.weixin.qq.com/s/3PUixs3DlBn8PhDZcEeK5A)
 
