add early_reading blogs commit

--- a/_posts/2018-08-31-8月早读.md
+++ b/_posts/2018-08-31-8月早读.md
@@ -86,6 +86,50 @@ It is time that we all perceive gender on a spectrum, instead of two sets of opp
 </audio>
 
 
+##### [Day133 8.04 早读原文](https://mp.weixin.qq.com/s/VpZc7-ulh99QpxaVTI0d1w)
+
+It is time that we all perceive gender on a spectrum, instead of two sets of opposing ideals.
+
+应该将性别视作一个范围，而非势不两立的不同极端。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE1Mzc0">
+</audio>
+
+##### [Day132 8.03 早读原文](https://mp.weixin.qq.com/s/6Nf1VV0NGrXMiXrvvCExlg)
+
+There's no such a thing as "a long time ago". There's only memories that mean something, and memories that don't.
+
+根本没有“很久以前”这回事。只是有些回忆有意义，有些没意义罢了。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE1MzAy">
+</audio>
+
+##### [Day131 8.02 早读原文](https://mp.weixin.qq.com/s/NsyfLbZMv1YXA6kb-ujCjg)
+
+It seems in today's world, the power to absolve debt is greater than the power of forgiveness
+
+于今，人情远比宽恕更有力量。<br>
+宽恕是放过自己，人情是善待别人，高质量的社交，享人情于无形，不费脑但用心。
+早安。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE1Mjkx">
+</audio>
+
+##### [Day130 8.01 早读原文](https://mp.weixin.qq.com/s/CohQmm_SW_a3bFNYkNHS8Q)
+
+Are you going to Scarborough Fair<br>
+Parsley sage rosemary and thyme<br>
+Remember me to one who lives there<br>
+He was once a true love of mine
+
+您要去斯卡布罗集市吗？
+香芹，鼠尾草，迷迭香和百里香
+请代我向他问候
+他曾是我的挚爱
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE1Mjgy">
+</audio>
+
 
 [点我取一个完美英文名(#^.^#)](http://ename.shanbay.com.cn)
 
