--- a/_posts/2018-09-12-9月早读.md
+++ b/_posts/2018-09-12-9月早读.md
@@ -14,6 +14,19 @@ tags:
 
 >  **英语早读**
 
+##### [Day189 9.12 早读原文](https://mp.weixin.qq.com/s/NIv63Lp-vLeuiBFCn_LwcA)
+
+I love thee to the depth and breadth and height,<br>
+My soul can reach,when feeling out of sight,<br>
+For the end of Being and ideal Grach. 
+
+我爱你的程度是那样的高深和广远,<br>
+恰似我的灵魂曾飞到九天与黄泉,<br>
+去探索人生的奥妙,和神灵的恩典。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE2MDE4">
+</audio>
+
 ##### [Day188 9.11 早读原文](https://mp.weixin.qq.com/s/bXIGDI8QeIulIR-43Mgc6A)
 
 It's always the attention to detail and the little grace notes that really make something sing.
