--- a/_posts/2018-09-13-9月早读.md
+++ b/_posts/2018-09-13-9月早读.md
@@ -2,7 +2,7 @@
 layout: post
 title: 陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-09-12
+date:   2018-09-13
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,17 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day190 9.13 早读原文](https://mp.weixin.qq.com/s/HFBhSk8zquhIUPWXppXOEA)
+
+No one can tell you you're in love. You just know it. Through and through, balls to bones.
+
+没人会告诉你在爱里的感觉是什么，辗转反侧，甘苦酸甜，唯有自知。<br>
+生活终究，如鱼饮水，冷暖自知。<br>
+早安。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE2MDI2">
+</audio>
 
 ##### [Day189 9.12 早读原文](https://mp.weixin.qq.com/s/NIv63Lp-vLeuiBFCn_LwcA)
 
