--- a/_posts/2018-09-17-9月早读.md
+++ b/_posts/2018-09-17-9月早读.md
@@ -2,7 +2,7 @@
 layout: post
 title: 陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-09-13
+date:   2018-09-17
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,26 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day192 9.17 早读原文](https://mp.weixin.qq.com/s/iJwZG7Ub2GFkxtzp6Zredw)
+
+If you want to be successful tomorrow,it's impossible.If you want to be successful a year later,It's impossible.But if you want to win ten years later,you have a chance.
+
+如果你想明天成功，那是不可能的。如果你想一年后成功，也是不可能的。但如果你想十年后赢的话，你有机会。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE2MTI3">
+</audio>
+
+##### [Day191 9.14 早读原文](https://mp.weixin.qq.com/s/vNDS3LM9Ovl4CZkJ49exGQ)
+
+The world is full of those who achieve through negativity or theft.We succeed through original thought.
+
+世界充斥着不劳而获的成功者，我们却靠创造力脱颖而出。
+众创，需众更靠创，改变的核心竞争力是创新。
+早安。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE2MDM5">
+</audio>
 
 ##### [Day190 9.13 早读原文](https://mp.weixin.qq.com/s/HFBhSk8zquhIUPWXppXOEA)
 
