add early_reading blog commit

--- a/_posts/2018-09-18-9月早读.md
+++ b/_posts/2018-09-18-9月早读.md
@@ -2,7 +2,7 @@
 layout: post
 title: 陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-09-17
+date:   2018-09-18
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,17 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day193 9.18 早读原文](https://mp.weixin.qq.com/s/VH67O_Y0FwrxVjLekQ6LWQ)
+
+You may say that I'm a dreamer,but I'm not the only one<br>
+I hope some day you'll join us,and the world will be as one
+
+你也许会说我只是在幻想，但不只是我这样<br>
+我希望某天你会加入我们，那样这世界就会融为一体
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE2MTQx">
+</audio>
 
 ##### [Day192 9.17 早读原文](https://mp.weixin.qq.com/s/iJwZG7Ub2GFkxtzp6Zredw)
 
