add early_reading blog commit

--- a/_posts/2018-09-20-9月早读.md
+++ b/_posts/2018-09-20-9月早读.md
@@ -14,6 +14,18 @@ tags:
 
 >  **英语早读**
 
+##### [Day194 9.19 早读原文](https://mp.weixin.qq.com/s/AiccOcnjkpm-vLx0n6cJ3Q)
+
+If you can keep your head when all about you<br>
+Are losing theirs and blaming it on you.
+
+面对质疑和指责，你是否还能处变不惊？
+忠言逆耳，敢于承认错误，远比逃避问题，更勇敢可信赖。
+早安。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE2MTUy">
+</audio>
+
 ##### [Day193 9.18 早读原文](https://mp.weixin.qq.com/s/VH67O_Y0FwrxVjLekQ6LWQ)
 
 You may say that I'm a dreamer,but I'm not the only one<br>
