add early_reading blog commit

--- a/_posts/2018-09-20-9月早读.md
+++ b/_posts/2018-09-20-9月早读.md
@@ -14,6 +14,15 @@ tags:
 
 >  **英语早读**
 
+##### [Day195 9.20 早读原文](https://mp.weixin.qq.com/s/gyn8sUf7n0eK8TXmxyw_5Q)
+
+Sometimes those who deserve the most blame also deserve the most compassion.
+
+有时，那些应受到责备的人也最值得同情。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE2MTY3">
+</audio>
+
 ##### [Day194 9.19 早读原文](https://mp.weixin.qq.com/s/AiccOcnjkpm-vLx0n6cJ3Q)
 
 If you can keep your head when all about you<br>
