add blog commit

--- a/_posts/2018-09-20-快捷方式属性中“打开文件位置”不可用.md
+++ b/_posts/2018-09-20-快捷方式属性中“打开文件位置”不可用.md
@@ -36,7 +36,7 @@ tags:
 
 ![](http://my.csdn.net/uploads/201206/09/1339256923_1195.png)
 
-3、以上图中“桌面上快捷方式”为例来处理该快捷方式属性上的“打开文件位置”。如下图，点击Ｆile,在右侧区域的ＦileName列找到该快捷方式指向TestApp.exe文件即值为“TESTAPP.EXE|TestApp.exe“，（由于这里我写的是演示安装程序,File下文件比较少，只有三个文件），并拷贝File列下的值，我这里为”_856E41D22D7048E084EF1DCDB607D38D“。
+3、以上图中“桌面上快捷方式”为例来处理该快捷方式属性上的“打开文件位置”。如下图，点击File,在右侧区域的FileName列找到该快捷方式指向TestApp.exe文件即值为“TESTAPP.EXE|TestApp.exe“，（由于这里我写的是演示安装程序,File下文件比较少，只有三个文件），并拷贝File列下的值，我这里为”_856E41D22D7048E084EF1DCDB607D38D“。
 
 ![](http://my.csdn.net/uploads/201206/10/1339258776_8151.png)
 
