add early_reading blogs commit

--- a/_posts/2018-08-31-8月早读.md
+++ b/_posts/2018-08-31-8月早读.md
@@ -42,7 +42,9 @@ You must strive to find your own voice. Because the longer you wait to begin, th
 <audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE1Nzc0">
 </audio>
 
-##### [Day150 8.15 早读原文](https://mp.weixin.qq.com/s/gxzyhxH0ih1pPBjYLb1JWw)
+------
+
+##### [Day141 8.15 早读原文](https://mp.weixin.qq.com/s/gxzyhxH0ih1pPBjYLb1JWw)
 
 She <br> 
 May be the face I can't forget<br>
@@ -57,8 +59,37 @@ May be my treasure or the price I have to pay.
 <audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE1NTI5">
 </audio>
 
-------------------
-##### [Day140 8.09 早读原文](https://mp.weixin.qq.com/s/N0364UoLb4TBU05FQWz1Rw)
+##### [Day140 8.14 早读原文](https://mp.weixin.qq.com/s/K9j1BbjIQpplLeUqOzUZcw)
+
+The greatest challenge of life is knowing when to break with conventional wisdom.
+
+人生最大的挑战是知道何时打破传统智慧的束缚。<br>
+做对的事，永远都不算晚！
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE1NTIw">
+</audio>
+
+##### [Day139 8.13 早读原文](https://mp.weixin.qq.com/s/jxPWaG-uCC53M7941S6tEA)
+
+The hardest choices require the strongest wills.
+
+最艰难的选择需要强烈的意志
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE1NTA2">
+</audio>
+
+##### [Day138 8.10 早读原文](https://mp.weixin.qq.com/s/IWaVrAOU08GyML2mo0xx6Q)
+
+We're meant to lose the people we love. How else would we know how important they are to us.
+
+我们注定要失去所爱的人，不然怎么会知道他们在我们生命中有多重要？<br>
+莫失莫忘，且行且惜。<br>
+晚安
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE1NDEz">
+</audio>
+
+##### [Day137 8.09 早读原文](https://mp.weixin.qq.com/s/N0364UoLb4TBU05FQWz1Rw)
 
 Our fears can play tricks on us,making us afraid to change course,afraid to move on.
 
@@ -67,7 +98,7 @@ Our fears can play tricks on us,making us afraid to change course,afraid to move
 <audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE1NDA1">
 </audio>
 
-##### [Day139 8.08 早读原文](https://mp.weixin.qq.com/s/8_uspHUIIpXpFxxarr6rtw)
+##### [Day136 8.08 早读原文](https://mp.weixin.qq.com/s/8_uspHUIIpXpFxxarr6rtw)
 
 Heal the world.Make it a better place.For you and for me and the entire human race.
 
@@ -76,7 +107,16 @@ Heal the world.Make it a better place.For you and for me and the entire human ra
 <audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE1Mzk4">
 </audio>
 
-##### [Day137 8.06 早读原文](https://mp.weixin.qq.com/s/VpZc7-ulh99QpxaVTI0d1w)
+##### [Day135 8.07 早读原文](https://mp.weixin.qq.com/s/TLtOAX-TOWYoeCHiGIO4Bw)
+
+The people that are the most giving, hardworking, and capable of making this world better, usually don't have the ego and ambition to be a leader.
+
+那些给予最多，努力工作并且能够让这个世界变得更美好的人通常没有自我和雄心成为领导者。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE1Mzkz">
+</audio>
+
+##### [Day134 8.06 早读原文](https://mp.weixin.qq.com/s/VpZc7-ulh99QpxaVTI0d1w)
 
 It is time that we all perceive gender on a spectrum, instead of two sets of opposing ideals..
 
