add early_reading blog commit

--- a/_posts/2018-09-22-9月早读.md
+++ b/_posts/2018-09-22-9月早读.md
@@ -2,7 +2,7 @@
 layout: post
 title: 陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-09-20
+date:   2018-09-22
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,17 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day195 9.21 早读原文](https://mp.weixin.qq.com/s/iklSFQq0MzGJQei2SY129A)
+
+Never mistake woman's meekness for weakness.
+
+不要错把温顺当懦弱。<br>
+善良谦逊不是软弱，而是适时的妥协，于己于人，都是善行。
+早安。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE2MTc5">
+</audio>
 
 ##### [Day195 9.20 早读原文](https://mp.weixin.qq.com/s/gyn8sUf7n0eK8TXmxyw_5Q)
 
