add early_reading blogs commit

--- a/_posts/2018-08-31-8月早读.md
+++ b/_posts/2018-08-31-8月早读.md
@@ -14,7 +14,7 @@ tags:
 
 >  **英语早读**
 
-##### [Day150 8.31 早读原文](https://mp.weixin.qq.com/s/bn2zAZQteV6aPkBqpdc9cw)
+##### [Day152 8.31 早读原文](https://mp.weixin.qq.com/s/bn2zAZQteV6aPkBqpdc9cw)
 
 I don't know why terrible things happen to us somethings,but I believe that something good is going to come out of this.
 
@@ -24,7 +24,7 @@ I don't know why terrible things happen to us somethings,but I believe that some
 <audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE1ODA4">
 </audio>
 
-##### [Day150 8.30 早读原文](https://mp.weixin.qq.com/s/32mgmaS119bmhymFB3TcIg)
+##### [Day151 8.30 早读原文](https://mp.weixin.qq.com/s/32mgmaS119bmhymFB3TcIg)
 
 We rip out so much of ourselves to be cured of things faster that we go bankrupt by the age of 30.
 
@@ -42,7 +42,83 @@ You must strive to find your own voice. Because the longer you wait to begin, th
 <audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE1Nzc0">
 </audio>
 
-------
+
+##### [Day149 8.27 早读原文](https://mp.weixin.qq.com/s/leqwlNcMEyywuqsVua7yHA)
+
+Trust that everything will work out for you.Maybe not exactly as you planned,but perfectly for the evolution of your soul.
+
+坚信所有的付出与努力终不会辜负你，也许当下未必如愿，未来总会顺遂。<br>
+努力的意义，是让未来的你为自己骄傲。过往不追，未来可期。<br>
+早安。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE1NzUw">
+</audio>
+
+##### [Day148 8.24 早读原文](https://mp.weixin.qq.com/s/niGelwMKUQXB3XZmxPlAUg)
+
+A lot of people are obsessed over whatever negative quality they perceive in themselves and they completely miss the thing that really makes them awesome.
+
+许多人往往聚焦自己的缺点，而常常忽略挖掘自身的潜力。
+放大问题，不如聚焦解决。办法总比困难多。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE1NjY5">
+</audio>
+
+##### [Day147 8.23 早读原文](https://mp.weixin.qq.com/s/iBNQfzP9rcVYfAnKdazfUg)
+
+An easy solution is like a light in a storm.Rush for it at your peril for it may not always lead you to a safe harbour. 
+
+捷径如同急风骤雨中的一道闪电，急于躲闪，往往难以奏效，差强人意。<br>
+成功没有捷径，奋斗总在路上。
+早安。<br>
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE1NjUz">
+</audio>
+
+##### [Day146 8.22 早读原文](https://mp.weixin.qq.com/s/hwcZ7_wbHbTgtF9bMQkiCQ)
+
+When I find myself in times of trouble,Mouther Marry comes to me,speaking worlds of wisdom,let it be.
+
+每当我深陷困境时，圣母玛丽会来到我身边对我说：随它去吧！
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE1NjQ1">
+</audio>
+
+##### [Day145 8.21 早读原文](https://mp.weixin.qq.com/s/hA3L4zayG8BRZNQEKCJtMg)
+
+Open information is fantastic.Open networks are essentail.But the truth won't set us free until we develop the skills and the habit and the talent and the moral courage to use it.
+
+公开信息是很棒的，公开的网络很关键。但是事实不会让我们自由，除非我们拥有技能、习惯、天赋以及道德上的勇气去利用它。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE1NjQw">
+</audio>
+
+##### [Day144 8.20 早读原文](https://mp.weixin.qq.com/s/SU6godOLS8XNgX0RMDzxRQ)
+
+In spite of you and me and the whole silly world going to pieces around us...I love you.
+
+我爱你，无论天荒地老，海枯石烂。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE1NTQx">
+</audio>
+
+##### [Day143 8.17 早读原文](https://mp.weixin.qq.com/s/16FgdGS9Yw-Mi5hWlZrs3Q)
+
+In spite of you and me and the whole silly world going to pieces around us...I love you.
+
+我爱你，无论天荒地老，海枯石烂。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE1NTQx">
+</audio>
+
+##### [Day142 8.16 早读原文](https://mp.weixin.qq.com/s/qXJBHdg1u2aTJ5N61iHVpQ)
+
+I'm done being scared. I'm done living in a world where I don't get to be who I am.
+
+我吓坏了，我生活在一个无法成为自己的世界里。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE1NTM2">
+</audio>
 
 ##### [Day141 8.15 早读原文](https://mp.weixin.qq.com/s/gxzyhxH0ih1pPBjYLb1JWw)
 
