--- a/_posts/2018-09-22-9月早读.md
+++ b/_posts/2018-09-22-9月早读.md
@@ -134,7 +134,10 @@ Trying to change the world only leads to suffering. All we can change is ourselv
 <audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE1OTEy">
 </audio>
 
-##### [Day181 9.04 早读原文](https://mp.weixin.qq.com/s/aLZOu4i6bu0lT2nFu343YA)
+***  按照下面的日期更 ***
+----
+
+##### [Day154 9.04 早读原文](https://mp.weixin.qq.com/s/aLZOu4i6bu0lT2nFu343YA)
 
 A bad deed done with compassion is still a merciful act.
 
@@ -143,7 +146,7 @@ A bad deed done with compassion is still a merciful act.
 <audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE1ODkx">
 </audio>
 
-##### [Day180 9.03 早读原文](https://mp.weixin.qq.com/s/TZzTQhP8vejuwUwvjYpFYg)
+##### [Day153 9.03 早读原文](https://mp.weixin.qq.com/s/TZzTQhP8vejuwUwvjYpFYg)
 
 When we focus on what matters, we can build the lives we want in the time we've got.
 当我们关注重要的事上时，我们可以用所拥有的时间去创造我们想要的生活了。
