--- a/_posts/2018-09-26-9月早读.md
+++ b/_posts/2018-09-26-9月早读.md
@@ -2,7 +2,7 @@
 layout: post
 title: 陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-09-22
+date:   2018-09-26
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,16 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day195 9.26 早读原文](https://mp.weixin.qq.com/s/TSum9cf0NYYMCba2iaBhyA)
+
+We don't change.We take the gravel int the shell and we make a pearl.And we help other people to change,so that they can see more kind of beauty.
+
+我们不变，我们把小石子放进贝壳里，然后做成一颗珍珠。我们帮助其他人改变，以便他们看到更多形式的美。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE2MjY4">
+</audio>
+
 
 ##### [Day195 9.21 早读原文](https://mp.weixin.qq.com/s/iklSFQq0MzGJQei2SY129A)
 
