--- a/_posts/2017-11-10-陈果情商课.md
+++ b/_posts/2017-11-10-陈果情商课.md
@@ -14,9 +14,7 @@ tags:
 
 >  **情商课**
 
-大二时导员在班里为我们放这个，感触颇多，整理了下。
-
-另外很多原始的文字是从别人的文章里获取的，谢谢大家的分享哈！ 
+大二时导员在班里为我们放陈果老师的视频，感触颇多，整理了下。另外很多原始的文字是从别人的文章里获取的，谢谢大家的分享哈！ 
 
 ## 孤独与寂寞
 
