--- a/_posts/2018-09-28-9月早读.md
+++ b/_posts/2018-09-28-9月早读.md
@@ -2,7 +2,7 @@
 layout: post
 title: 陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-09-26
+date:   2018-09-28
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -14,7 +14,25 @@ tags:
 
 >  **英语早读**
 
-##### [Day195 9.26 早读原文](https://mp.weixin.qq.com/s/TSum9cf0NYYMCba2iaBhyA)
+##### [Day168 9.28 早读原文](https://mp.weixin.qq.com/s/pBVKNEnBeUOntUTh7wwWYA)
+
+When life gets you down,you know what you gotta do?Just keep swimming.
+
+当生活让你沮丧时，你知道你要做什么吗?继续前进就好!
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE2MzE4">
+</audio>
+
+##### [Day167 9.27 早读原文](https://mp.weixin.qq.com/s/pe9CkHG8_P6hBLCw9RqUeQ)
+
+The greatest good you can do for another is not just to share your own riches,but to reveal to him his own.--Benjamin Disraeli
+
+你能为他人做的最好的事呢，并不是分享你的财富，而是展示他们自己的财富。（授人以鱼不如授人以渔）
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE2MzAx">
+</audio>
+
+##### [Day166 9.26 早读原文](https://mp.weixin.qq.com/s/TSum9cf0NYYMCba2iaBhyA)
 
 We don't change.We take the gravel int the shell and we make a pearl.And we help other people to change,so that they can see more kind of beauty.
 
@@ -24,7 +42,7 @@ We don't change.We take the gravel int the shell and we make a pearl.And we help
 </audio>
 
 
-##### [Day195 9.21 早读原文](https://mp.weixin.qq.com/s/iklSFQq0MzGJQei2SY129A)
+##### [Day165 9.21 早读原文](https://mp.weixin.qq.com/s/iklSFQq0MzGJQei2SY129A)
 
 Never mistake woman's meekness for weakness.
 
@@ -35,7 +53,7 @@ Never mistake woman's meekness for weakness.
 <audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE2MTc5">
 </audio>
 
-##### [Day195 9.20 早读原文](https://mp.weixin.qq.com/s/gyn8sUf7n0eK8TXmxyw_5Q)
+##### [Day164 9.20 早读原文](https://mp.weixin.qq.com/s/gyn8sUf7n0eK8TXmxyw_5Q)
 
 Sometimes those who deserve the most blame also deserve the most compassion.
 
@@ -44,7 +62,7 @@ Sometimes those who deserve the most blame also deserve the most compassion.
 <audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE2MTY3">
 </audio>
 
-##### [Day194 9.19 早读原文](https://mp.weixin.qq.com/s/AiccOcnjkpm-vLx0n6cJ3Q)
+##### [Day163 9.19 早读原文](https://mp.weixin.qq.com/s/AiccOcnjkpm-vLx0n6cJ3Q)
 
 If you can keep your head when all about you<br>
 Are losing theirs and blaming it on you.
@@ -56,7 +74,7 @@ Are losing theirs and blaming it on you.
 <audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE2MTUy">
 </audio>
 
-##### [Day193 9.18 早读原文](https://mp.weixin.qq.com/s/VH67O_Y0FwrxVjLekQ6LWQ)
+##### [Day162 9.18 早读原文](https://mp.weixin.qq.com/s/VH67O_Y0FwrxVjLekQ6LWQ)
 
 You may say that I'm a dreamer,but I'm not the only one<br>
 I hope some day you'll join us,and the world will be as one
@@ -67,7 +85,7 @@ I hope some day you'll join us,and the world will be as one
 <audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE2MTQx">
 </audio>
 
-##### [Day192 9.17 早读原文](https://mp.weixin.qq.com/s/iJwZG7Ub2GFkxtzp6Zredw)
+##### [Day161 9.17 早读原文](https://mp.weixin.qq.com/s/iJwZG7Ub2GFkxtzp6Zredw)
 
 If you want to be successful tomorrow,it's impossible.If you want to be successful a year later,It's impossible.But if you want to win ten years later,you have a chance.
 
@@ -76,7 +94,7 @@ If you want to be successful tomorrow,it's impossible.If you want to be successf
 <audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE2MTI3">
 </audio>
 
-##### [Day191 9.14 早读原文](https://mp.weixin.qq.com/s/vNDS3LM9Ovl4CZkJ49exGQ)
+##### [Day160 9.14 早读原文](https://mp.weixin.qq.com/s/vNDS3LM9Ovl4CZkJ49exGQ)
 
 The world is full of those who achieve through negativity or theft.We succeed through original thought.
 
@@ -87,7 +105,7 @@ The world is full of those who achieve through negativity or theft.We succeed th
 <audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE2MDM5">
 </audio>
 
-##### [Day190 9.13 早读原文](https://mp.weixin.qq.com/s/HFBhSk8zquhIUPWXppXOEA)
+##### [Day159 9.13 早读原文](https://mp.weixin.qq.com/s/HFBhSk8zquhIUPWXppXOEA)
 
 No one can tell you you're in love. You just know it. Through and through, balls to bones.
 
@@ -98,7 +116,7 @@ No one can tell you you're in love. You just know it. Through and through, balls
 <audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE2MDI2">
 </audio>
 
-##### [Day189 9.12 早读原文](https://mp.weixin.qq.com/s/NIv63Lp-vLeuiBFCn_LwcA)
+##### [Day158 9.12 早读原文](https://mp.weixin.qq.com/s/NIv63Lp-vLeuiBFCn_LwcA)
 
 I love thee to the depth and breadth and height,<br>
 My soul can reach,when feeling out of sight,<br>
@@ -111,7 +129,7 @@ For the end of Being and ideal Grach.
 <audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE2MDE4">
 </audio>
 
-##### [Day188 9.11 早读原文](https://mp.weixin.qq.com/s/bXIGDI8QeIulIR-43Mgc6A)
+##### [Day157 9.11 早读原文](https://mp.weixin.qq.com/s/bXIGDI8QeIulIR-43Mgc6A)
 
 It's always the attention to detail and the little grace notes that really make something sing.
 
@@ -120,7 +138,7 @@ It's always the attention to detail and the little grace notes that really make 
 <audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE2MDEz">
 </audio>
 
-##### [Day187 9.10 早读原文](https://mp.weixin.qq.com/s/jrpBU9eiW0Wd4mp-RCvZ7Q)
+##### [Day156 9.10 早读原文](https://mp.weixin.qq.com/s/jrpBU9eiW0Wd4mp-RCvZ7Q)
 
 You teach me right from wrong
 Inspire me to be strong
@@ -135,7 +153,7 @@ In my heart you will always stay
 <audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE1OTg4">
 </audio>
 
-##### [Day186 9.07 早读原文](https://mp.weixin.qq.com/s/3PUixs3DlBn8PhDZcEeK5A)
+##### [Day155 9.07 早读原文](https://mp.weixin.qq.com/s/3PUixs3DlBn8PhDZcEeK5A)
 
 Trying to change the world only leads to suffering. All we can change is ourselves.
 
@@ -143,9 +161,6 @@ Trying to change the world only leads to suffering. All we can change is ourselv
 
 <audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE1OTEy">
 </audio>
-
-***  按照下面的日期更 ***
-----
 
 ##### [Day154 9.04 早读原文](https://mp.weixin.qq.com/s/aLZOu4i6bu0lT2nFu343YA)
 
