add early_reading blog commit

--- a/_posts/2018-09-20-Git 推送更新出现错误.md
+++ b/_posts/2018-09-20-Git 推送更新出现错误.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      git 推送更新出现错误： Updates were rejected because the remote contains work that you do
+title:      Git 推送更新出现错误： Updates were rejected because the remote contains work that you do
 subtitle:   
 date:       2018-09-20
 author:     JP
