--- a/_posts/2018-10-05-10月早读.md
+++ b/_posts/2018-10-05-10月早读.md
@@ -2,7 +2,7 @@
 layout: post
 title: 陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-10-04
+date:   2018-10-05
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,15 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day173 10.05 早读原文](https://mp.weixin.qq.com/s/0TxnYge8kxoltXIK8i683g)
+
+If your dream isn't worth the risk,what is?
+
+如果梦想都不值冒险，什么才值得?
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE2NDU2">
+</audio>
 
 ##### [Day172 10.04 早读原文](https://mp.weixin.qq.com/s/iRzdwoeIXULCK8OmzrFRLw)
 
