--- a/_posts/2018-10-09-10月早读.md
+++ b/_posts/2018-10-09-10月早读.md
@@ -2,7 +2,7 @@
 layout: post
 title: 陪你早读的 TeacherGwen
 subtitle:   早读原文
-date:   2018-10-05
+date:   2018-10-09
 author: JP
 header-img: img/post-bg-swift.jpg
 catalog: true
@@ -13,6 +13,24 @@ tags:
 ---
 
 >  **英语早读**
+
+##### [Day175 10.09 早读原文](https://mp.weixin.qq.com/s/gX6QGbfOFmks82QV134DgA)
+
+Believe me,If I were a young woman now.I'd spend more time being,Not doing.
+
+相信我，如果我是一个年轻的女孩，我会花更多的时间去做自己，而不是做这个做那个。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE2NTY4">
+</audio>
+
+##### [Day174 10.08 早读原文](https://mp.weixin.qq.com/s/kAPyQPFNxvcp5IXLARoedg)
+
+Don't you stop running and don't you ever look behind you.There's nothing for you behind you.All that exists is what's ahead.
+
+不要停止奔跑，不要回顾来路，你后面没什么可眷恋的，真正当下存在的，就在前方。
+
+<audio style="height:140;width:400;" controls="controls" src="https://res.wx.qq.com/voice/getvoice?mediaid=MzI4OTAyODUxNF8yNjUzNTE2NTI0">
+</audio>
 
 ##### [Day173 10.05 早读原文](https://mp.weixin.qq.com/s/0TxnYge8kxoltXIK8i683g)
 
