--- a/_posts/2018-06-23-LINQ.md
+++ b/_posts/2018-06-23-LINQ.md
@@ -495,7 +495,7 @@ a => Console.WriteLine(a)
 () => Console.WriteLine("ddd")
 ```
 
-###### <2> =>是lambda操作符
+###### <2> =>是lambda操作符（读作“goes to”）
 
 ###### <3> Console.WriteLine(a)是要执行的语句。
 
