--- a/_posts/2018-09-20-Git 推送更新错误.md
+++ b/_posts/2018-09-20-Git 推送更新错误.md
@@ -11,7 +11,7 @@ tags:
     
 ---
 
-每次在家更新完Blog，回到公司再更新，总会出现这样的错误，真令人头疼
+每次在家更新完Blog，回到公司再更新，总会出现这样的错误，真令人头疼。后来仔细查阅了文档，原来是基础没打牢啊。git pull命令的作用是，取回远程主机某个分支的更新，再与本地的指定分支合并。废话不多说，看下面步骤：
 
 git 提交的步骤： <br>
 
